<resources>
    <string name="app_name">Login</string>
    <string name="user_login">Usuário</string>
    <string name="user_pw">Senha</string>
    <string name="button_login">Logar</string>
    <string name="button_sign">Cadastrar</string>
    <string name="button_forgot_pw">Esqueci a senha</string>
    <string name="welcome_text">Bem vindo</string>
    <string name="take_picture_button">Tirar foto</string>
    <string name="button_login_click">Botão de login clicado</string>
    <string name="button_forgot_pw_click">Botão de esqueci a senha clicado</string>
    <string name="button_sign_click">Clicou no botão Cadastrar</string>
</resources>